# user-service

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  logging.yaml  pyproject.toml  requirements.txt
.devcontainer/: compose.yaml  devcontainer.json
.devcontainer/k8s-tools-alpine/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: test-chart.yml  test-policies.yml  test-policy.yml  test-service.yml
charts/opa/: values.yaml
charts/opa/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
charts/userservice/: Chart.yaml  values.yaml
charts/userservice/charts/mongo/: Chart.yaml  values.yaml
charts/userservice/charts/mongo/templates/: NOTES.txt  deployment.yaml  serviceaccount.yaml
charts/userservice/charts/opa/: Chart.yaml  values.yaml
charts/userservice/charts/opa/policies/: userservice_test.rego
charts/userservice/charts/opa/templates/: deployment.yaml
charts/userservice/charts/opa/templates/tests/: test-connection.yaml
charts/userservice/policies/: userservice.rego  userservice_test.rego
charts/userservice/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  configmap_opa.yaml  configmap_userservice.yaml  deployment.yaml  deployment_mongo.yaml  deployment_opa.yaml  destinationrule.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  secret_userservice.yaml  service_mongo.yaml  service_opa.yaml
charts/userservice/templates/tests/: test-connection.yaml
src/user_service/: api.py  database.py  main.py  models.py  security.py  settings.py  utils.py
tests/: conftest.py  test_api.py  test_database.py  test_main.py  test_security.py
