[project]
name = "user_service"
description = "Simple user service"
readme = "README.md"
dynamic = ["version", "dependencies"]
authors = [{ name = 'Sylvain Viollon', email = 'thefunny@gmail.com' }]
requires-python = '>=3.12'

[project.scripts]
user-service = "user_service.main:main"
new-user-service-token = "user_service.security:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79

[tool.coverage.run]
# XXX Need to add test for database.
omit = ['src/user_service/database.py']

[tool.coverage.report]
fail_under = 100

[tool.hatch.version]
path = "src/user_service/main.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["black", "flake8", "isort"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = ["isort {args:.}", "black {args:.}"]
lint-check = "flake8 {args:.}"
lint-fix = "lint-check"

[tool.hatch.envs.hatch-test]
randomize = true
extra-dependencies = ["pytest-asyncio==0.23.7", "respx==0.21.1"]
